--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
           <i class="fas fa-camera fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            En cada sesión, busco capturar la frescura y autenticidad de los
+            alimentos, creando imágenes que no solo estimulen visualmente, sino
+            que también evocan emociones y despiertan el apetito en quienes las
+            ven. Cada foto es el resultado de una cuidadosa planificación,
+            paciencia y una profunda pasión por la fotografía culinaria.
           </p>
         </div>
         <div class="col-12 col-md-4">
