Cambio en -critica culinaria-

--- a/index.html
+++ b/index.html
@@ -112,10 +112,12 @@
           <i class="fas fa-bullhorn fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Crítica culinaria</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Al realizar críticas culinarias, me sumerjo en una experiencia
+            sensorial completa. Observo y degusto cada plato con atención
+            meticulosa, evaluando la presentación, la textura, el equilibrio de
+            sabores y la creatividad del chef. También considero el servicio, el
+            ambiente y la atención al cliente para ofrecer una evaluación
+            completa.
           </p>
         </div>
         <div class="col-12 col-md-4">
