Cambio en -bloggera de viajes-

--- a/index.html
+++ b/index.html
@@ -124,10 +124,13 @@
           <i class="far fa-map fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            En mis blogs de viajes, comparto experiencias auténticas y
+            perspectivas únicas sobre los destinos que visito. Mi enfoque se
+            centra en contar historias cautivadoras, destacando los aspectos
+            culturales, gastronómicos y paisajísticos de cada lugar. Utilizo un
+            lenguaje vívido y descriptivo para sumergir a los lectores en mis
+            vivencias, haciendo que sientan la emoción y la maravilla de cada
+            viaje.
           </p>
         </div>
       </div>
